      to use for one-off session password hashes that shouldn't get
      saved to disk by SAVECONF.  Partial fix for bug 586.

  o Minor features (logging):
    - When SafeLogging is disabled, log addresses along with all TLS
      errors.

  o Minor features (build):
    - When built with --enable-gcc-warnings, check for whether Apple's
      warning "-Wshorten-64-to-32" is enabled.

  o Minor bugfixes:
    - Log the correct memory chunk sizes for empty RAM chunks in mempool.c.
    - Directory mirrors no longer include a guess at the client's IP
      address if the connection appears to be coming from the same /24
      network; it was producing too many wrong guesses.
    - We were leaking a file descriptor if Tor started with a zero-length
      cached-descriptors file. Patch by freddy77; bugfix on 0.1.2.
    - Make the new hidden service code respect the SafeLogging setting.
      Bugfix on 0.2.0.x.  Patch from Karsten.
    - Detect size overflow in zlib code.
    - We were comparing the raw BridgePassword entry with a base64'ed
      version of it, when handling a "/tor/networkstatus-bridges"
      directory request. Now compare correctly. Noticed by Veracode.
    - When starting as an authority, do not overwrite all certificates
      cached from other authorities.  Bugfix on 0.2.0.x.  Fixes bug 606.
    - Recover from bad tracked-since value in MTBF-history file.
      Should fix bug 537.
    - If we're trying to flush the last bytes on a connection (for
      example, when answering a directory request), reset the
      time-to-give-up timeout every time we manage to write something
      on the socket. Bugfix on 0.1.2.x.
    - Change the behavior of "getinfo status/good-server-descriptor"
      so it doesn't return failure when any authority disappears.
    - Even though the man page said that "TrackHostExits ." should
      work, nobody had ever implemented it. Bugfix on 0.1.0.x.
    - Alter the code that tries to recover from unhandled write